# homework_4_1

./: pyproject.toml
homework-1/: main.py
homework-2/: main.py
homework-6/: main.py
src/: item.py  items_2.csv  keyboard.py  phone.py
tests/: test_item.py  test_items_raises.py  test_keyboard.py  test_phone.py
